# profg-transcript

./: .env.example  README.md  pyproject.toml  sent_episodes.json
.github/workflows/: profg-transcript.yml
src/profg_transcript/: __init__.py  app.py
tests/: test_app.py
